// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Label 1`] = `
.c0 {
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
  font-weight: 600;
  display: inline-block;
}

<label
  className="c0"
  color="palette.charcoal800"
  fontSize="small"
  fontWeight="semiBold"
  htmlFor="party"
>
  🎉
</label>
`;

exports[`Label supports fontWeight 1`] = `
.c0 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 400;
  font-size: 0.875rem;
  display: inline-block;
}

<label
  className="c0"
  color="palette.charcoal800"
  fontSize="small"
  fontWeight="normal"
  htmlFor="party"
>
  test
</label>
`;
